--- a/The Front-End Web Developer Bootcamp HTML, CSS, JS & React/blockAndInlineElements.html
+++ b/The Front-End Web Developer Bootcamp HTML, CSS, JS & React/blockAndInlineElements.html
@@ -11,5 +11,15 @@
     <var>Hello</var>
     <br>
     <q>Every thing is ok.</q>
+    <samp>hi to k</samp>
+    <br>
+    <select name="" id="">
+        <option value="">Country</option>
+        <option value="">Iphone</option>
+        <option value="">samsung</option>
+        <option value="">LG</option>
+        <option value="">Vivo</option>
+        <option value=""></option>
+    </select>
 </body>
 </html>
