--- a/The Front-End Web Developer Bootcamp HTML, CSS, JS & React/mini-project/index.html
+++ b/The Front-End Web Developer Bootcamp HTML, CSS, JS & React/mini-project/index.html
@@ -18,8 +18,9 @@
                 on templates, websites, and stock designs. Use our generator to get your own,
                 or read on for the authoritative history of lorem ipsum.
             </p>
-            <form action="">
+            <form action="" class="from-code">
                 <input type="text" placeholder="enter your post code">
+                <br>
                 <button type="submit">find food</button>
             </form>
         </div>
